syntax = "proto3";
package gitlab.com.mercury.residenceservice.generated.model.v1;
option go_package = "gitlab.com.mercury/residenceserviceapi/v1";

import "residenceserviceapi_user_model.proto";
/**
* The system service.
*/
service SystemService {

  /**
  * Returns a list of users
  */
  rpc ListUsers(ListUsersRequest) returns (ListUsersResponse) {}

  /**
  * Updates user by id
  */
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse) {}
}

message ListUsersRequest {
  UserSearchCriteria criteria = 1;
}

message ListUsersResponse {
  repeated UserRead users = 1;
  int64 total = 2;
}

message UpdateUserRequest {
  int64 user_id = 1;
  UserWrite user = 2;
}

message UpdateUserResponse {
}